--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Bootstrap classes to make division impresive -->
 	<div class="container jumbotron text-center">
 		<h1>See N Story Maker</h1>
-		<img src="Capture.PNG" width="950" height="700" alt="Planets" usemap="#planetmap">
+		<img src="InkedCapture2_LI.jpg" width="950" height="700" alt="Planets" usemap="#planetmap">
 	<!-- This will map the image, so that functioning can be applied -->
 <map name="planetmap">
 
@@ -23,14 +23,18 @@
 	<area alt="Image will come soon" coords="700,109,23" shape="circle" id="adjective">
 	<area alt="Image will come soon" coords="765,110,23" shape="circle" id="anotherNoun">
 	<area alt="Image will come soon" coords="834,106,25" shape="circle" id="place">
-	<area alt="Image will come soon" coords="785,540,28" shape="circle" id="reset">
-	<area alt="Image will come soon" coords="868,554,27" shape="circle" id="surprizeButton"> 
+	<area alt="Image will come soon" coords="785,540,28" shape="circle" id="surprizeButton">
+	<area alt="Image will come soon" coords="868,554,27" shape="circle" id="playback"> 
+	<area coords="799,440,881,438,886,473,799,478" shape="poly" id="reset">
   </map>
 	<script src="app.js" ></script>
 	
 <div>
 	
 <!--These are the instructions for the game to play-->
+<div>
+	<p id="para"></p>
+</div>
 <h2> Instructions to use the game </h2>
 
 <ol>
@@ -40,9 +44,9 @@
 	<li>The green button selects any button from list of third column.</li>
 	<li>The orange button selects any button from list of fourth column.</li>
 	<li>The pink button selects any button from list of five column.</li>
-	<li>The red button selects the reset function and resets the String.</li>
-	<li>The sky blue button, adjacent to red button which will surprizingly say a sentence.</li>
-	<li>To view whats going on background please see the console.</li>
+	<li>The red button selects the surprize function and generates a random sentence.</li>
+	<li>The black button is used for resetting the string.</li>
+	<li>The paragraph below is showing the words which we are selecting.</li>
 </ol>
 
 </div>
